tests/parser/parse-do.2.bad.error
error: Malformed do expression
  --> test:5:6
   |
 5 |    (do (x <- mx)))
   |     -- when parsing do expression
   |        ^^^^^^^^^ do expression cannot be terminated by a bind
